--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/color": "^3.0.6",
+    "color": "^4.2.3",
     "expo": "~51.0.14",
     "expo-av": "~14.0.5",
     "expo-constants": "~16.0.2",
@@ -17,6 +19,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-color-picker": "^0.6.0",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
     "zustand": "^4.5.2"
