--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@types/color": "^3.0.6",
+    "add": "^2.0.6",
     "color": "^4.2.3",
     "expo": "~51.0.14",
     "expo-av": "~14.0.5",
@@ -17,9 +19,12 @@
     "expo-file-system": "~17.0.1",
     "expo-media-library": "^16.0.3",
     "expo-status-bar": "~1.12.1",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-color-picker": "^0.6.0",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
     "zustand": "^4.5.2"
